--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		  <p>To achieve these outputs and apply optical art patterns to a variety of input images would require a technique in machine learning called image-to-image translation. Pix2pix was utilised as the implementation 
 			  of image-to-image translation using a conditional adversarial network called CycleGAN (cGAN). Pix2Pix works by training the neural network on a set of related input-output image pairs to generate the target 
-			  output from the input (Isola et al., 2016).  he aim was to train a neural network on image pairs of patterned 3D objects rendered using a game engine (target output) and a depth map of 
+			  output from the input (Isola et al., 2016).  The aim was to train a neural network on image pairs of patterned 3D objects rendered using a game engine (target output) and a depth map of 
 			  the rendered image as the translation layer (or input). A depth map is a grayscale image that contains information about the distance between the surface of objects from a given perspective.
 			  It is hoped that the network will be able to take input depth maps of any image or model and output an image with the pattern applied to create the optical effect above.  
 			</p>
