--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
 		
 
 	</div>
-		
+	<footer>
+    		<ul>
+        		<li><a href="https://github.com/Senpai55">github.com/Senpai55</a></li>
+			</ul>	
 </body>
 </html>
