--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<div id="header">
-			<a href="https://www.thirdculturekiwi.com/synthetic-illusions"><p>Back to Main Site</p></a>
+			<a href="https://www.thirdculturekiwi.com/synthetic-illusions"><p>Back to Main Site</p></a> <br>
+			<a href="https://github.com/Senpai55/SyntheticIllusions_pix2pix_cycleGAN"><p>GitHub Repo</p></a>
 	</div>
 
 	<div id="titlebox">
