--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	  <p id="author">Senai Leniston-Kahsai <br>
 		  23/10/2019 <br>
 		   </p>
-		<p><a href="https://github.com/Senpai55/SyntheticIllusions_pix2pix_cycleGAN"><p>[GitHub Repo]</p></a>
-		  <a href="files/Final Writeup – Problem Set 4(compressed)">[Download PDF]</p>
+		<p><a href="https://github.com/Senpai55/SyntheticIllusions_pix2pix_cycleGAN">[GitHub Repo]</a>
+                        <a href="files/Final Writeup – Problem Set 4(compressed)">[Download PDF]</a></p>
 	  <h2>About</h2>
 	  <p>For this project a neural network was trained on a synthetic dataset rendered using 3D game engine software. Neural networks require a large amount of high-quality labelled data. 
 		  Without the infrastructure and the data collection methods of large technology companies it can be difficult to source a large enough dataset to train a neural network effectively. 
