--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		  23/10/2019 <br>
 		   </p>
 		<center><p><a href="https://github.com/Senpai55/SyntheticIllusions_pix2pix_cycleGAN">[GitHub Repo]</a>
-                        <a href="files/Final Writeup – Problem Set 4(compressed)">[Download PDF]</a></p></center>
+                        <a href="files/Final Writeup – Problem Set 4(compressed).pdf">[Download PDF]</a></p></center>
 	  <h2>About</h2>
 	  <p>For this project a neural network was trained on a synthetic dataset rendered using 3D game engine software. Neural networks require a large amount of high-quality labelled data. 
 		  Without the infrastructure and the data collection methods of large technology companies it can be difficult to source a large enough dataset to train a neural network effectively. 
@@ -158,7 +158,7 @@
 		<hr>
 
 		<center> <h2>Paper</h2>
-		 <a href="files/Final Writeup – Problem Set 4(compressed)">
+		 <a href="files/Final Writeup – Problem Set 4(compressed).pdf">
 		<image class="resultexamples" style="width: 300px" src="files/Final Writeup – Problem Set 4-1.png"></image>
 		</a>
 		</center>
