--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="sketch.js"></script>
 
-<link href="https://fonts.googleapis.com/css?family=Dosis:300i|Raleway:300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato|Oxygen|Roboto|Roboto+Slab|Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="header">
