--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="sketch.js"></script>
 
-<link href="https://fonts.googleapis.com/css?family=Ubuntu|Oxygen|Raleway|Roboto|Roboto+Slab|Lato&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway|Poppins|Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div id="header">
@@ -20,8 +20,8 @@
 	  <p id="author">Senai Leniston-Kahsai <br>
 		  23/10/2019 <br>
 		   </p>
-		<center><p><a href="https://github.com/Senpai55/SyntheticIllusions_pix2pix_cycleGAN">[GitHub Repo]</a>
-                        <a href="files/Final Writeup – Problem Set 4(compressed).pdf">[Download PDF]</a></p></center>
+		   <center><a href="https://github.com/Senpai55/SyntheticIllusions_pix2pix_cycleGAN">[GitHub Repo]</a>
+                        <a href="files/Final Writeup – Problem Set 4(compressed).pdf">[Download PDF]</a></center>
 	  <h2>About</h2>
 	  <p>For this project a neural network was trained on a synthetic dataset rendered using 3D game engine software. Neural networks require a large amount of high-quality labelled data. 
 		  Without the infrastructure and the data collection methods of large technology companies it can be difficult to source a large enough dataset to train a neural network effectively. 
@@ -145,13 +145,13 @@
 			
 		<p class="indent">Chan, L. (2012). Hand Op Art. Retrieved from https://www.deviantart.com/x-luna-chan-x/art/Hand-Op-Art-305612272</p>
 
-		<p class="indent">Isola, P., Zhu, J. Y., Zhou, T., & Efros, A. A. (2016). Image-to-image translation with conditional adversarial networks. In Proceedings of the IEEE conference on computer vision and pattern recognition (pp. 1125-1134).</p>
+		<p class="indent">Isola, P., Zhu, J. Y., Zhou, T., & Efros, A. A. (2016). <i>Image-to-image translation with conditional adversarial networks. In Proceedings of the IEEE conference on computer vision and pattern recognition</i> (pp. 1125-1134).</p>
 
-		<p class="indent">Rodriguez, P. (2019). Generating Synthetic Data for Image Segmentation with Unity and PyTorch/fastai. Retrieved from https://blog.stratospark.com/generating-synthetic-data-image-segmentation-unity-pytorch-fastai.html</p>
+		<p class="indent">Rodriguez, P. (2019). <i>Generating Synthetic Data for Image Segmentation with Unity and PyTorch/fastai.</i> Retrieved from https://blog.stratospark.com/generating-synthetic-data-image-segmentation-unity-pytorch-fastai.html</p>
 		
 		<p class="indent">Unity Technologies. (n.d.). Image Synthesis for Machine Learning. Retrieved from https://bitbucket.org/Unity-Technologies/ml-imagesynthesis/src.</p>
 
-		<p class="indent">Vaserely, V. (1957). VEGA III [Painting, Kinetic art, Oil on canvas]. Guggenheim, New York, NY.</p>
+		<p class="indent">Vaserely, V. (1957). <i>VEGA III</i> [Painting, Kinetic art, Oil on canvas]. Guggenheim, New York, NY.</p>
 
 		<br><br>
 
@@ -160,7 +160,7 @@
 		<center> <h2>Paper</h2>
 		 <a href="files/Final Writeup – Problem Set 4(compressed).pdf">
 		<image class="resultexamples" style="width: 300px" src="files/Final Writeup – Problem Set 4-1.png"></image>
-		</a>
+		 </a>
 		</center>
 
 	</div>
