--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<h4 class="subheading">Dataset Generation</h4>
 		<p>
 		The generation of synthetic data was achieved using an open source package by Unity Game Engine, 
-		called ‘Image Synthesis for Machine Learning’ (https://bitbucket.org/Unity-Technologies/ml-imagesynthesis/src) which was modified to suit the purposes of this project (Unity Technologies, n.d.). 
+		called <a href="https://bitbucket.org/Unity-Technologies/ml-imagesynthesis/src">‘Image Synthesis for Machine Learning’</a> which was modified to suit the purposes of this project (Unity Technologies, n.d.). 
 		It is a sample project that can be used to build a synthetic image generator using the Unity camera to render images at runtime (Rodriguez, 2019). 
 		This tool is capable of rapidly generating large datasets of rendered images of 3D scenes as well as accompanying image depth (depth maps), 
 		segmentation maps (categorisation), optical flow (motion) and more as shown below. </p>
