--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Raleway|Poppins|Quicksand&display=swap" rel="stylesheet">
 </head>
+	<a name="top"></a>
 <body>
 	<div id="header">
 			<a href="https://www.thirdculturekiwi.com/synthetic-illusions"><p>Back to Main Site</p></a>
@@ -167,4 +168,5 @@
 	<footer>
     		
 </body>
+	<a href="#top">Back to Top</a>
 </html>
