--- a/index.html
+++ b/index.html
@@ -168,5 +168,8 @@
 	<footer>
     		
 </body>
-	<a href="#top">Back to Top</a>
+	<div>
+	<center><a href="#top">Back to Top</a>
+		</center>
+	</div>
 </html>
